--- a/style.css
+++ b/style.css
@@ -9,9 +9,38 @@ body {
     padding: 30px;
 }
 
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.align-center{
+    align-items: center;
+    justify-content: center;
+}
+
+.text-vertical{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    font-size: 10px;
+}
+
+.text-gray{
+    color: gray;
+}
+
 h2{
     width: 100%;
-    text-align: center;
 }
 
 .wrapper {
@@ -31,7 +60,7 @@ header{
 .settings {
     display: flex;
     flex-direction: row;
-    width: 30%;
+    width: 40vw;
     justify-content: space-between;
 }   
 
@@ -41,22 +70,14 @@ menu {
     justify-content: space-between;
 }
 
-.columns {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
 .left {
     width: 50%;
     display: flex;
-    flex-direction: column;
 
 }
 .right {
     width: 50%;
     display: flex;
-    flex-direction: column;
 }
 
 .asset-items{
