--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ body {
     color: gray;
 }
 
+.text-medium{
+    font-size: 11px;
+}
+
+.text-small{
+    font-size: 9px;
+}
+
 h2{
     width: 100%;
 }
@@ -59,8 +67,7 @@ header{
 
 .settings {
     display: flex;
-    flex-direction: row;
-    width: 40vw;
+    width: 30vw;
     justify-content: space-between;
 }   
 
