--- a/style.css
+++ b/style.css
@@ -110,15 +110,17 @@ body {
 .wrapper {
     display: grid;
     height: 100vh;
-    grid-template-columns: 100%;
-    grid-template-rows: 15vh 15vh auto;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 15vh 10vh 35vh 30vh 25vh;
     padding: 10px;
 }
 
 header{
+    grid-column: 1/5;
+    grid-row: 1/2;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .settings {
@@ -127,7 +129,6 @@ header{
     gap: 10px;
     width: 400px;
     background-color: var(--white-dark);
-
 }
 
 .setting{
@@ -135,8 +136,9 @@ header{
 }
 
 menu {
+    grid-column: 1/5;
+    grid-row: 2/3;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -147,6 +149,7 @@ menu {
     height: 60px;;
     justify-content: space-evenly;
 }
+
 .general{
     background-color: var(--green);
     border-radius: 10px;
@@ -170,6 +173,8 @@ menu {
 }
 
 .agriculture{
+    width: 300px;
+    height: 60px;
     border-bottom: var(--green) 3px solid;
     padding: 5px;
     margin: 5px
@@ -179,13 +184,45 @@ menu {
     background-color: var(--green);
     border-radius: var(--radius);
     padding: 5px;
-    margin: 5px
+    margin: 5px;
+    height: 26px;
+    width: 100%;
 }
 
-.assets-items{
+.plants {
+    grid-column: 1/3;
+    grid-row: 3/6;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.animals{
+    grid-column: 3/4;
+    grid-row: 3/5;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.refined{
+    grid-column: 4/5;
+    grid-row: 3/4;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.fishes{
+    grid-column: 4/5;
+    grid-row: 4/5;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.assets{
+    grid-column: 3/5;
+    grid-row: 5/6;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 [class^="asset-"]{
@@ -193,5 +230,83 @@ menu {
     padding: 0px 10px 0px 0px;
     margin-top: 5px;
     border-radius: 5px;
+    height: 30px;
+    width: 120px;
+
 }
 
+/* ---------------- MOBILE ---------------- */
+@media (max-width: 768px) {
+
+.wrapper {
+    display: grid;
+    /* height: 100vh; */
+    grid-template-columns: 100%;
+    grid-template-rows: 30vh 60vh 160vh 70vh 35vh 25vh 25vh;
+    padding: 10px;
+}
+
+header{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo{
+    max-width: 500px;
+    font-size: 24px;
+    text-align: center;
+}
+
+.settings {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 300px;
+}
+
+menu{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.indicator {
+    width: 100%;
+    max-width: 300px;
+}
+
+.agrititle{
+    max-width: 400px;
+}
+.plants{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    justify-content: center;
+}
+
+.animals{
+    grid-column: 1/2;
+    grid-row: 4/5;
+    justify-content: center;
+}
+.refined{
+    grid-column: 1/2;
+    grid-row: 5/6;
+    justify-content: center;
+}
+.fishes{
+    grid-column: 1/2;
+    grid-row: 6/7;
+    justify-content: center;
+}
+.assets{
+    grid-column: 1/2;
+    grid-row: 7/8;
+    display: flex;
+    flex-wrap: wrap;
+}
+}
