--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ menu {
     justify-content: center;
     font-weight: 600;
     transition: left 0.3s ease;
-    cursor: pointer; /* указатель */
+    cursor: pointer; 
     text-decoration: none;
 }
 
