--- a/style.css
+++ b/style.css
@@ -148,11 +148,15 @@ menu {
     width: 250px;
     height: 60px;;
     justify-content: space-evenly;
+
+}
+
+.consumption{
     position: relative;
     overflow: hidden;
 }
 
-.indicator .ipc-overlay {
+.consumption .ipc-overlay {
     position: absolute;
     top: 0;
     left: -100%;
@@ -170,7 +174,7 @@ menu {
 }
 
 
-.indicator.hovered .ipc-overlay {
+.consumption.hovered .ipc-overlay {
     left: 0;
 }
 
