--- a/style.css
+++ b/style.css
@@ -264,12 +264,15 @@ menu {
     padding: 1px;
 }
 
+.fact{
+    position: relative;
+}
 .potato .fact .popup {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 52%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 100%;
+    transform: translate(-50%);
     background: white;
     border-radius: 5px;
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
