--- a/style.css
+++ b/style.css
@@ -215,14 +215,26 @@ menu {
     border-radius: var(--radius);
     padding: 10px;
     margin: 10px;
+    gap: 10px;
 }
 
-.agriculture{
-    width: 300px;
+/* .agriculture{
+    min-width: 150px;
+    max-width: 350px;
     height: 60px;
     border-bottom: var(--green) 3px solid;
     padding: 5px;
     margin: 5px
+} */
+
+.agriculture {
+    flex: 1 1 250px; /* 1 — grow, 1 — shrink, 250px — базовый размер */
+    min-width: 100px; /* минимальная ширина, до которой может ужаться */
+    max-width: 320px; /* максимальная ширина */
+    width: 100%;
+    height: 60px;
+    border-bottom: var(--green) 3px solid;
+    padding: 5px;
 }
 
 .agrititle{
@@ -322,29 +334,83 @@ menu {
 
 }
 
-/* ---------------- PAD (769px вЂ” 1024px) ---------------- */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* ---------------- PAD (769px till 1024px) ---------------- */
+@media (min-width: 750px) and (max-width: 1141px) {
 .wrapper {
     display: grid;
-    grid-template-columns: 50% 505;
-    grid-template-rows: 30vh 60vh 160vh 70vh 35vh 25vh;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20vh 40vh 80vh 40vh 35vh 20vh;
     padding: 10px;
 }
 
-header{
+header {
     grid-column: 1/3;
     grid-row: 1/2;
     flex-direction: column;
-    /* justify-content: space-around; */
-    /* align-items: center; */
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.logo{
-    max-width: *;
+.logo {
     font-size: 24px;
     text-align: center;
 }
 
+menu {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.general{
+    width: 100%;
+}
+
+.plants{
+    grid-column: 1/2;
+    grid-row: 3/6;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.animals{
+    grid-column: 2/3;
+    grid-row: 3/4;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.refined{
+    grid-column: 2/3;
+    grid-row: 4/5;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.fishes{
+    grid-column: 2/3;
+    grid-row: 5/6;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.assets{
+    grid-column: 1/3;
+    grid-row: 6/7;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 10px;
+}
 }
 
 /* ---------------- MOBILE ---------------- */
@@ -392,7 +458,7 @@ menu{
 }
 
 .agrititle{
-    max-width: 400px;
+    width: 100%;
 }
 .plants{
     grid-column: 1/2;
